    can be used and configured at a single place.
  * Use apt-pinning via /etc/grml/fai/config/hooks/instsoft.GRMLBASE
    and drop it from /etc/grml/fai/config/scripts/GRMLBASE/33-aptsetup
    later again.
  * Display version number of grml-live.
  * Log executed grml-live command line.
  * Set FAI_DEBOOTSTRAP_OPTS="--exclude=dhcp-client,info"
    by default.
  * Set $SECONDS to unknown if $start_seconds is not set.
  * Log closing signs (----...) via bailout to make sure they are
    always set - even when exiting with an error.
  * Check for presence of /bin/zsh before setting default shell in
    /etc/grml/fai/config/scripts/GRMLBASE/21-usersetup
  * Add new packages to GRML_FULL:
    - bittwist
    - ldnsutils
    - libpam-thinkfinger
    - linux-wlan-ng-modules-2.6.23-grml
    - madwifi-modules-2.6.23-grml
    - netrw
    - rt73-module-2.6.23-grml
    - thinkfinger-tools
  * Drop idn from GRML_FULL.
  * Add new packages to GRML_MEDIUM:
    - alsa-base
    - alsa-tools
    - alsa-utils
    - ed
    - pcmciautils
    - Update kernel version to 2.6.23-grml
    - replace dhcp-client with dhcp3-client
  * Add ed package to GRML_SMALL and replace dhcp-client with
    dhcp3-client.
  * Use new kernel version 2.6.23-grml64 for amd64.

 -- Michael Prokop <mika@grml.org>  Sat, 20 Oct 2007 12:12:33 +0200

grml-live (0.0.6) unstable; urgency=low

  * New option "-a" for setting architecture. This allows building
    grml(32) on amd64.
  * Fix stderr redirection in "/usr/sbin/fai already running..."
  * Update /etc/grml/fai/make-fai-nfsroot.conf
  * Use /var/log/fai/dirinstall/${HOSTNAME}/grml-live.log as logfile
    for grml-live instead of /var/log/grml-live.log so it's easier
    to track.
  * Update of buildd scripts: main configuration file main.sh
    which provides all the build stuff inside separate functions.
  * Fall back to blackhole.pca.dfn.de as keyserver if retreiving
    from subkeys.pgp.net fails.
  * Improve check for kernel version inside